MachineSpeedMultiplier: Add inserter speed multiplier

--- a/MachineSpeedMultiplier/locale/en/locale.cfg
+++ b/MachineSpeedMultiplier/locale/en/locale.cfg
@@ -4,6 +4,7 @@ MachineSpeedMultiplier-furnace-speed-factor=Furnace speed factor
 MachineSpeedMultiplier-lab-speed-factor=Lab research speed factor
 MachineSpeedMultiplier-mining-drill-speed-factor=Mining Drill / Pumpjack speed factor
 MachineSpeedMultiplier-rocket-silo-speed-factor=Rocket Silo speed factor
+MachineSpeedMultiplier-inserter-speed-factor=Inserter speed factor
 
 [mod-setting-description]
 MachineSpeedMultiplier-assembling-machine-speed-factor=Includes Oil Refinery, Chemical Plant, Centrifuge, Biochamber, and Plants
