--- a/TechnologyPriceMultiplier/locale/en/locale.cfg
+++ b/TechnologyPriceMultiplier/locale/en/locale.cfg
@@ -1,2 +1,7 @@
 [mod-setting-name]
 TechnologyPriceMultiplier-price-factor=Price factor
+TechnologyPriceMultiplier-price-exponent-factor=Price growth factor
+
+[mod-setting-description]
+TechnologyPriceMultiplier-price-factor=Adjusts the final science pack cost of all technologies, including infinite technologies. A factor of 0.5 means all technologies cost half as much.
+TechnologyPriceMultiplier-price-exponent-factor=Adjusts the exponential growth curve for the science pack cost of infinite technologies. A factor of 0.5 means the cost of infinite technologies will increase half as much per level.
