RoboportRangeMultiplier: Add multiplier for personal roboports

--- a/RoboportRangeMultiplier/locale/en/locale.cfg
+++ b/RoboportRangeMultiplier/locale/en/locale.cfg
@@ -1,3 +1,7 @@
 [mod-setting-name]
 RoboportRangeMultiplier-logistics-range-factor=Logistics range factor
 RoboportRangeMultiplier-construction-range-factor=Construction range factor
+RoboportRangeMultiplier-personal-construction-range-factor=Personal construction range factor
+
+[mod-setting-description]
+RoboportRangeMultiplier-personal-construction-range-factor=Adjusts the construction range of personal roboport equipment.
