--- a/RobotPowerMultiplier/locale/en/locale.cfg
+++ b/RobotPowerMultiplier/locale/en/locale.cfg
@@ -9,5 +9,5 @@ RobotPowerMultiplier-robot-approach-distance-factor=Queue distance factor
 RobotPowerMultiplier-robot-max-energy-factor=Higher factor means robots can travel farther before needing to recharge, but take more time to recharge at roboports.
 RobotPowerMultiplier-robot-charging-energy-factor=Higher factor means robots recharge faster at roboports.
 RobotPowerMultiplier-robot-movement-energy-consumption-factor=Lower factor makes robots consume less energy, making them able to fly farther before needing to recharge.
-RobotPowerMultiplier-robot-speed-factor=Higher factor means the robot moves faster, but will still consume the same amount of energy per meter, so it doesn't affect maximum travel distance.
-RobotPowerMultiplier-robot-approach-distance-factor=Lower factor makes robots wait closer to the roboport while queueing, leading to overall faster recharging.
+RobotPowerMultiplier-robot-speed-factor=Higher factor means robots move faster, but will still consume the same amount of energy per meter, so it doesn't affect maximum travel distance.
+RobotPowerMultiplier-robot-approach-distance-factor=Lower factor makes robots wait closer to the roboport while queueing for recharge, leading to more time-efficient queueing and overall faster recharging.
