Add roboport radar range multiplier

--- a/RoboportRangeMultiplier/locale/en/locale.cfg
+++ b/RoboportRangeMultiplier/locale/en/locale.cfg
@@ -2,6 +2,8 @@
 RoboportRangeMultiplier-logistics-range-factor=Logistics range factor
 RoboportRangeMultiplier-construction-range-factor=Construction range factor
 RoboportRangeMultiplier-personal-construction-range-factor=Personal construction range factor
+RoboportRangeMultiplier-radar-range-factor=Roboport radar range factor
 
 [mod-setting-description]
 RoboportRangeMultiplier-personal-construction-range-factor=Adjusts the construction range of personal roboport equipment.
+RoboportRangeMultiplier-radar-range-factor=At 1.0, the radar range scales to cover both the logistics and construction areas, rounded up in chunks. Adjust this factor if you want the radar range to be larger/smaller than those areas. At 0, roboports will have no radar.
