Simplified Chinese Translation,mod name and mod description

--- a/MachineSpeedMultiplier/locale/zh-CN/locale.cfg
+++ b/MachineSpeedMultiplier/locale/zh-CN/locale.cfg
@@ -1,3 +1,9 @@
+[mod-name]
+MachineSpeedMultiplier=机器速度倍率
+
+[mod-description]
+MachineSpeedMultiplier=通过乘数调整机器的工作速度
+
 [mod-setting-name]
 MachineSpeedMultiplier-assembling-machine-speed-factor=组装机速度倍数
 MachineSpeedMultiplier-furnace-speed-factor=炉子速度倍数
