--- a/RobotPowerMultiplier/locale/zh-CN/locale.cfg
+++ b/RobotPowerMultiplier/locale/zh-CN/locale.cfg
@@ -1,3 +1,9 @@
+[mod-name]
+RobotPowerMultiplier=机器人能量倍率
+
+[mod-description]
+RobotPowerMultiplier=通过乘数调整物流和建造机器人的速度和各种功率相关值
+
 [mod-setting-name]
 RobotPowerMultiplier-robot-max-energy-factor=电量容量倍数
 RobotPowerMultiplier-robot-charging-energy-factor=充电速率倍数
