--- a/TechnologyPriceMultiplier/locale/zh-CN/locale.cfg
+++ b/TechnologyPriceMultiplier/locale/zh-CN/locale.cfg
@@ -1,3 +1,9 @@
+[mod-name]
+TechnologyPriceMultiplier=科研价格倍率
+
+[mod-description]
+TechnologyPriceMultiplier=通过乘数调整所有科学研究技术的价格，包括无限科学研究技术。例如，乘数为0.5意味着技术成本减半，因此研究时间减半
+
 [mod-setting-name]
 TechnologyPriceMultiplier-price-factor=价格倍数
 TechnologyPriceMultiplier-price-exponent-factor=价格增长倍数
