--- a/RoboportRangeMultiplier/locale/zh-CN/locale.cfg
+++ b/RoboportRangeMultiplier/locale/zh-CN/locale.cfg
@@ -1,3 +1,9 @@
+[mod-name]
+RoboportRangeMultiplier=指令平台范围倍率
+
+[mod-description]
+RoboportRangeMultiplier=通过乘数调整所有指令平台的范围
+
 [mod-setting-name]
 RoboportRangeMultiplier-logistics-range-factor=物流范围倍数
 RoboportRangeMultiplier-construction-range-factor=建造范围倍数
