Add multiplier for science pack tier-based price scaling

--- a/TechnologyPriceMultiplier/locale/en/locale.cfg
+++ b/TechnologyPriceMultiplier/locale/en/locale.cfg
@@ -1,7 +1,9 @@
 [mod-setting-name]
 TechnologyPriceMultiplier-price-factor=Price factor
 TechnologyPriceMultiplier-price-exponent-factor=Price growth factor
+TechnologyPriceMultiplier-price-tier-scaling-factor=Price tier scaling factor
 
 [mod-setting-description]
 TechnologyPriceMultiplier-price-factor=Adjusts the final science pack cost of all technologies, including infinite technologies. A factor of 0.5 means all technologies cost half as much.
 TechnologyPriceMultiplier-price-exponent-factor=Adjusts the exponential growth curve for the science pack cost of infinite technologies. A factor of 0.5 means the cost of infinite technologies will increase half as much per level.
+TechnologyPriceMultiplier-price-tier-scaling-factor=Exponentially increases technology cost for each new science pack tier required. A factor of 2 results in costs of 2x, 4x, 8x, etc., for each subsequent tier. Can go below 1.0 for the inverse effect.
