--- a/TechnologyPriceMultiplier/locale/zh-CN/locale.cfg
+++ b/TechnologyPriceMultiplier/locale/zh-CN/locale.cfg
@@ -7,7 +7,9 @@ TechnologyPriceMultiplier=通过乘数调整所有科学研究技术的价格，
 [mod-setting-name]
 TechnologyPriceMultiplier-price-factor=价格倍数
 TechnologyPriceMultiplier-price-exponent-factor=价格增长倍数
+TechnologyPriceMultiplier-price-tier-scaling-factor=价格层级倍数
 
 [mod-setting-description]
 TechnologyPriceMultiplier-price-factor=调整所有科技（含无限科技）的科技包消耗总量。设为0.5时，所有科技消耗减少50%
 TechnologyPriceMultiplier-price-exponent-factor=调整无限科技的科技包消耗增长曲线。设为0.5时，每级科技消耗增幅减少50%
+TechnologyPriceMultiplier-price-tier-scaling-factor=根据科技所需的科技包层级，指数级地调整其消耗。例如，设为2时，每个后续层级的消耗将依次变为2倍、4倍、8倍等。可以低于1.0来实现相反的效果。
