TechnologyPriceMultiplier: Clarify growth factor locale name

--- a/TechnologyPriceMultiplier/locale/en/locale.cfg
+++ b/TechnologyPriceMultiplier/locale/en/locale.cfg
@@ -1,6 +1,6 @@
 [mod-setting-name]
 TechnologyPriceMultiplier-price-factor=Price factor
-TechnologyPriceMultiplier-price-exponent-factor=Price growth factor
+TechnologyPriceMultiplier-price-exponent-factor=Price growth factor of infinite tech
 TechnologyPriceMultiplier-price-tier-scaling-factor=Price tier scaling factor
 
 [mod-setting-description]
