--- a/TechnologyPriceMultiplier/locale/zh-CN/locale.cfg
+++ b/TechnologyPriceMultiplier/locale/zh-CN/locale.cfg
@@ -6,7 +6,7 @@ TechnologyPriceMultiplier=通过乘数调整所有科学研究技术的价格，
 
 [mod-setting-name]
 TechnologyPriceMultiplier-price-factor=价格倍数
-TechnologyPriceMultiplier-price-exponent-factor=价格增长倍数
+TechnologyPriceMultiplier-price-exponent-factor=价格增长倍数（无限科技）
 TechnologyPriceMultiplier-price-tier-scaling-factor=价格层级倍数
 
 [mod-setting-description]
