TechnologyPriceMultiplier: Add tier scaling curve adjustment option

--- a/TechnologyPriceMultiplier/locale/en/locale.cfg
+++ b/TechnologyPriceMultiplier/locale/en/locale.cfg
@@ -2,8 +2,10 @@
 TechnologyPriceMultiplier-price-factor=Price factor
 TechnologyPriceMultiplier-price-exponent-factor=Price growth factor of infinite tech
 TechnologyPriceMultiplier-price-tier-scaling-factor=Price tier scaling factor
+TechnologyPriceMultiplier-price-tier-scaling-curve=Price tier scaling curve
 
 [mod-setting-description]
 TechnologyPriceMultiplier-price-factor=Adjusts the final science pack cost of all technologies, including infinite technologies. A factor of 0.5 means all technologies cost half as much.
 TechnologyPriceMultiplier-price-exponent-factor=Adjusts the exponential growth curve for the science pack cost of infinite technologies. A factor of 0.5 means the cost of infinite technologies will increase half as much per level.
 TechnologyPriceMultiplier-price-tier-scaling-factor=Exponentially increases technology cost for each new science pack tier required. A factor of 2 results in costs of 2x, 4x, 8x, etc., for each subsequent tier. Can go below 1.0 for the inverse effect.
+TechnologyPriceMultiplier-price-tier-scaling-curve=Adjusts the curve of the exponential tier-based cost scaling. A factor less than 1.0 (e.g., 0.8) makes the curve taper off on higher tiers, making the jump in price less severe to avoid extreme costs in the end-game.
