TechnologyPriceMultiplier: Add option for later start of tier-based scaling

--- a/TechnologyPriceMultiplier/locale/zh-CN/locale.cfg
+++ b/TechnologyPriceMultiplier/locale/zh-CN/locale.cfg
@@ -9,9 +9,11 @@ TechnologyPriceMultiplier-price-factor=价格倍数
 TechnologyPriceMultiplier-price-exponent-factor=价格增长倍数（无限科技）
 TechnologyPriceMultiplier-price-tier-scaling-factor=价格层级倍数
 TechnologyPriceMultiplier-price-tier-scaling-curve=价格层级曲线
+TechnologyPriceMultiplier-price-tier-scaling-start=价格层级起点
 
 [mod-setting-description]
 TechnologyPriceMultiplier-price-factor=调整所有科技（含无限科技）的科技包消耗总量。设为0.5时，所有科技消耗减少50%
 TechnologyPriceMultiplier-price-exponent-factor=调整无限科技的科技包消耗增长曲线。设为0.5时，每级科技消耗增幅减少50%
 TechnologyPriceMultiplier-price-tier-scaling-factor=根据科技所需的科技包层级，指数级地调整其消耗。例如，设为2时，每个后续层级的消耗将依次变为2倍、4倍、8倍等。可以低于1.0来实现相反的效果。
 TechnologyPriceMultiplier-price-tier-scaling-curve=调整层级价格倍率的缩放曲线。当该值小于1.0时（例如0.8），会使曲线在更高层级时趋于平缓，从而减小价格的跃升幅度，以避免在游戏后期出现极端高昂的成本。
+TechnologyPriceMultiplier-price-tier-scaling-start=价格层级缩放效果开始生效的科技包层级。例如，设为3时，仅需要1级和2级科技包的科技不会受到影响，而层级缩放效果将从需要3级科技包的科技开始生效。
